# fluid-manager

./: .gitmodules  CMakeLists.txt  README.md
config/: fluid_manager_amm.xml  fluid_manager_capabilities.xml  fluid_manager_configuration.xml
src/: CMakeLists.txt  FluidManager.cpp
